--- a/index.html
+++ b/index.html
@@ -373,6 +373,12 @@
         <source src="https://assets.mixkit.co/active_storage/sfx/2568/2568-preview.mp3" type="audio/mpeg">
     </audio>
 
+<header class="topbar glass">
+  <nav class="nav">
+    <a class="nav__link" href="sanchia.html">Sanchia</a> <!-- NEW -->
+  </nav>
+</header>
+
     <!-- Main content -->
     <div class="container">
         <!-- Title -->
