fix opacity covering cards on kim page

--- a/kim.html
+++ b/kim.html
@@ -22,10 +22,10 @@
         </div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <div class="hero-badge">
+            <!-- <div class="hero-badge">
                 <span>🎃</span>
                 <span>Halloween Hackathon 2025</span>
-            </div>
+            </div> -->
             <div class="title-glass">
                 <h1 class="hero-title" id="main-title">TRICK OR THREAT</h1>
             </div>
